--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "textlint-util-to-string": "^3.1.1"
   },
   "devDependencies": {
-    "textlint-scripts": "^12.0.2"
+    "textlint-scripts": "^12.0.2",
+    "trim-newlines": ">=3.0.1"
   },
   "scripts": {
     "build": "textlint-scripts build",
